--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
+    <header>
         <h1>Simple Interest Calculator</h1>
-
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+    <div>
+        <label>Amount   <input type="number" value="1000000" id="principal"> </label><br/>
+        <label>Interest Rate <input type="range" id="rate" value="3.5" name="rangeInput" min="0" max="20" oninput="num.value = this.value">
+        <output id="num">3.5</output></label><br/>
+        <label>No. of Years <input type="number" id="years" name="numberInput" value="5" min="1" max="25"></label> <br/>
+        <button type="button" onclick = "compute();">Compute Interest</button>
+    </div> <br/>
+    <div id="result"></div>
+    <footer>
+        <p>&#169 Everyone Can Get Rich</p>
+    </footer>
+    </header>
     </body>
 </html>
