--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
+<!DOCTYPE html>
 <html>
     <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    </head>
     <meta charset="UTF-8">
     <title>Simple Interest Calculator</title>
+    </head>
     <body>
     <header>
         <h1>Simple Interest Calculator</h1>
     <div>
         <label>Amount   <input type="number" value="1000000" id="principal"> </label><br/>
         <label>Interest Rate <input type="range" id="rate" value="3.5" name="rangeInput" min="1" max="20" oninput="num.value = this.value">
-        <output id="num">3.5</output></label><br/>
+        <output id="num">3.5</output>%</label><br/>
         <label>No. of Years <input type="number" id="years" name="numberInput" value="5" min="1" max="25"></label> <br/>
         <button type="button" onclick = "compute();">Compute Interest</button>
     </div> <br/>
